-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 3.3.0-beta1
-
Windows Phone
The second try to deploy seems to work.
winrtrunner --device 0 --start --stop --install --wait 0 C:/Qt/Qt5.4.0/Examples/Qt-5.4/quick/demos/build-clocks-Qt_5_4_for_Windows_Phone_arm_MSVC2013_32bit-Debug/debug/clocks.exe
qt.winrtrunner: Using the AppxPhone profile.
qt.winrtrunner: Creating package from mapping file: "C:/Qt/Qt5.4.0/Examples/Qt-5.4/quick/demos/build-clocks-Qt_5_4_for_Windows_Phone_arm_MSVC2013_32bit-Debug/debug/AppxManifest.map"
qt.winrtrunner: Failed to add payload file: 0x8007007b "The filename, directory name, or volume label syntax is incorrect."
- is required for
-
QTBUG-41613 Issues to be fixed before 5.4.0 RC
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-13275 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 98250,4 | WinRT: Create mapping file for deployment when build is finished | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |