WinRT: Create mapping file for deployment when build is finished

Task-number: QTCREATORBUG-13275
Change-Id: I1fb8b951468793bd6edc0e10e53d708a876c0bf3
Reviewed-by: Andrew Knight <andrew.knight@theqtcompany.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>